--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -71,12 +71,13 @@
 
 			option {
 				display: flex;
+				align-items: center;
 				gap: 0.5rem;
 				padding: 0.5rem;
 
 				img {
-					aspect-ratio: 1;
 					width: 1.2rem;
+					height: 100%;
 				}
 			}
 		}
